[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/MiniGames/Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/MiniGames/Snake/LevelManager.gd" type="Script" id=2]

[node name="GameBase" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="RefreshTimer" type="Timer" parent="LevelContainer" index="0"]
wait_time = 0.15

[connection signal="pressed" from="EndGamePanel/Button" to="." method="start_level"]
[connection signal="pressed" from="FinishGamePanel/Button" to="." method="start_level"]
[connection signal="pressed" from="WinGamePanel/Button" to="." method="_on_win"]
